added time picker

--- a/app/src/main/res/layout/activity_depense_create.xml
+++ b/app/src/main/res/layout/activity_depense_create.xml
@@ -55,8 +55,10 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="38dp"
         android:ems="10"
+        android:focusable="false"
         android:hint="Date : jj-mm-aaaa"
         android:inputType="date"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/heur_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,8 +72,10 @@
         android:layout_marginEnd="38dp"
         android:layout_marginStart="38dp"
         android:ems="10"
+        android:focusable="false"
         android:hint="Heure : HH:mm"
         android:inputType="time"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
