--- a/app/src/main/res/layout/activity_statistics_menu.xml
+++ b/app/src/main/res/layout/activity_statistics_menu.xml
@@ -5,58 +5,77 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_stars"
-    tools:context=".action.statistics.StatisticsMenuActivity">
+    tools:context=".action.statistics.StatisticsMenuActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/button"
         android:layout_width="288dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
         android:layout_marginEnd="48dp"
         android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
         android:text="Statstiques des Societes"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="257dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="288dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="13dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
         android:text="Statistiques des Projets"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="316dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="288dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
         android:text="Statistiques des Depenses"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="377dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="288dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="48dp"
         android:background="@drawable/rounded_button"
         android:text="Statistiques des Taches"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="435dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="139dp"
-        android:layout_height="102dp"
-        android:layout_marginBottom="79dp"
-        android:layout_marginEnd="122dp"
-        android:layout_marginStart="123dp"
-        android:layout_marginTop="76dp"
+        android:id="@+id/imageView3"
+        android:layout_width="240dp"
+        android:layout_height="72dp"
+        android:layout_marginBottom="114dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="71dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_sharpinfo_400" />
+        app:srcCompat="@drawable/logo_expert" />
+
 </android.support.constraint.ConstraintLayout>
