--- a/app/src/main/res/layout/activity_societe_statistics.xml
+++ b/app/src/main/res/layout/activity_societe_statistics.xml
@@ -9,31 +9,31 @@
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/chart2societe"
-        android:layout_width="375dp"
-        android:layout_height="384dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
+        app:layout_constraintTop_toBottomOf="@+id/chart_choice_societe" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/chartsociete"
-        android:layout_width="375dp"
-        android:layout_height="384dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
+        app:layout_constraintTop_toBottomOf="@+id/chart_choice_societe" />
 
     <Spinner
         android:id="@+id/chart_choice_societe"
