--- a/app/src/main/res/layout/activity_projet_create.xml
+++ b/app/src/main/res/layout/activity_projet_create.xml
@@ -49,6 +49,8 @@
         android:hint="Date de début du projet"
         android:inputType="date"
         android:singleLine="false"
+        android:focusable="false"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/societe_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,4 +99,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_projet" />
+
+    <TextView
+        android:id="@+id/error_create_projet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/colorError"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ajouter_projet" />
 </android.support.constraint.ConstraintLayout>
