--- a/app/src/main/res/layout/item_projet_list.xml
+++ b/app/src/main/res/layout/item_projet_list.xml
@@ -35,22 +35,22 @@
 
     <TextView
         android:id="@+id/projet_item_description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.128"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"
-        android:layout_width="196dp"
+        android:layout_width="0dp"
         android:layout_height="26dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+
+        android:layout_marginEnd="60dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="32dp"
         android:layout_weight="1"
         android:text="description du projet"
         android:textAlignment="textStart"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.128"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
 
     <TextView
         android:id="@+id/projet_seeMore"
