--- a/app/src/main/res/layout/activity_projet_statistics.xml
+++ b/app/src/main/res/layout/activity_projet_statistics.xml
@@ -7,7 +7,7 @@
     tools:context=".action.statistics.ProjetStatisticsActivity"
     tools:layout_editor_absoluteY="81dp">
 
-    <com.github.mikephil.charting.charts.BarChart
+    <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/chart2"
         android:layout_width="0dp"
         android:layout_height="0dp"
