--- a/app/src/main/res/layout/activity_depense_list.xml
+++ b/app/src/main/res/layout/activity_depense_list.xml
@@ -23,7 +23,7 @@
 
     <include layout="@layout/content_depense_list" />
 
-    <com.sharpinfo.sir.MovableFloatingActionButton
+    <com.sharpinfo.sir.gestionprojet_v2.helper.MovableFloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
